--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,1 +1,30 @@
-dashboard
+<div class="admin__title">
+    <h2>Manage Posts</h2>
+    <a href="/add-post" class="btn">+ Add New</a>
+</div>
+
+<section class="admin__posts">
+
+    <ul class="admin__posts__ul">
+        <% posts.forEach(post => { %>
+            <li>
+                <a href="post/<%= post._id %>">
+                    <span><%= post.title %></span>
+                    <span class="article-list__date"><%= post.createdAt.toDateString() %></span>
+                </a>
+
+                <div class="admin__post__controls">
+                    <a href="edit-post/<%= post._id %>" class="btn">Edit</a>
+                    <form class="" action="delete-post/<%= post._id %>?_method=DELETE" method="post">
+                        <input type="submit" value="Delete" class="btn">
+                    </form>
+                </div>
+            </li>
+        <% }) %>
+    </ul>
+
+    <% if (nextPageNum >= 0) { %>
+        <a href="?page=<%= nextPageNum %>" class="pagination">&lt; View Older Posts</a>
+    <% } %>
+
+</section>
