Add feature: on dashboard, put existing posts and deleted posts in two sections, add a new title for deleted section.

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -27,6 +27,13 @@
         <a href="?page=<%= nextPageNum %>" class="pagination">&lt; View Older Posts</a>
     <% } %>
 
+</section>
+
+<div class="admin__title">
+    <h2>Manage Deleted Posts</h2>
+</div>
+
+<section class="admin__posts">
     <ul class="admin__posts__ul">
         <% deletedPosts.forEach(post => { %>
             <li>
