Code optimize: pass currPage and hasNext to accomplish pagination, allowing navigating to previous pages.

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -23,8 +23,8 @@
         <% }) %>
     </ul>
 
-    <% if (nextPageNum >= 0) { %>
-        <a href="?page=<%= nextPageNum %>" class="pagination">&lt; View Older Posts</a>
+    <% if (hasNextPage) { %>
+        <a href="?page=<%= pageNum + 1 %>" class="pagination">&lt; View Older Posts</a>
     <% } %>
 
 </section>
@@ -52,8 +52,8 @@
         <% }) %>
     </ul>
 
-    <% if (nextDeletedPageNum >= 0) { %>
-        <a href="?deletedPage=<%= nextDeletedPageNum %>" class="pagination">&lt; View Older Deleted Posts</a>
+    <% if (hasNextDeletedPage) { %>
+        <a href="?deletedPage=<%= deletedPageNum + 1 %>" class="pagination">&lt; View Older Deleted Posts</a>
     <% } %>
 
 </section>
