--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,10 @@
 <section class="articles">
     <h2 class="articles__heading">Latest Posts</h2>
 
+    <% if (pageNum > 0) { %>
+        <a href="?page=<%= pageNum - 1 %>" class="pagination">&lt; View Recent Posts</a>
+    <% } %>
+
     <ul class="article-ul">
         <% posts.forEach(post => { %>
             <li>
