--- a/views/partials/admin_header.ejs
+++ b/views/partials/admin_header.ejs
@@ -1,5 +1,5 @@
 <header class="header">
-    <a href="/" class="header__logo">R•A•Y - Admin</a>
+    <a href="/dashboard" class="header__logo">R•A•Y - Admin</a>
 
     <nav class="header__nav">
         <ul>
