--- a/views/admin/login-register.ejs
+++ b/views/admin/login-register.ejs
@@ -10,7 +10,7 @@
     <input type="submit" value="Login">
 </form>
 
-<h3>Register</h3>
+<!-- <h3>Register</h3>
 
 <form action="/register" method="post">
     <label for="username"><b>Username</b></label>
@@ -20,4 +20,4 @@
     <input type="text" name="password" placeholder="Enter password">
 
     <input type="submit" value="Register">
-</form>
+</form> -->
