Add feature: enable logout.

--- a/views/partials/admin_header.ejs
+++ b/views/partials/admin_header.ejs
@@ -16,8 +16,10 @@
     </nav>
 
     <div class="header__button">
-        <button>
-            Logout
-        </button>
+        <form action="/logout" method="post">
+            <button type="submit">
+                Logout
+            </button>
+        </form>
     </div>
 </header>
