Add feature: set password field to type password, add a checkbox to show or hide password.

--- a/views/admin/login-register.ejs
+++ b/views/admin/login-register.ejs
@@ -5,7 +5,10 @@
     <input type="text" name="username" placeholder="Enter username">
 
     <label for="password"><b>Password</b></label>
-    <input type="text" name="password" placeholder="Enter password">
+    <div class="password-input-div">
+        <input type="password" name="password" placeholder="Enter password" id="password-input">
+        <input type="checkbox" id="show-password-checkbox"> Show Password
+    </div>
 
     <input type="submit" value="Login">
 </form>
