Add feature: modify the css to create the active class for each ref element under header__nav.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -163,9 +163,8 @@ img {
     text-decoration: none;
 }
 
-#about.active,
-#contact.active {
-    color: white;
+.header__nav ul li a.active {
+    color: grey;
 }
 
 .header__nav ul a:hover {
