--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -11,7 +11,7 @@
     </head>
     <body>
         <%- include('../partials/search-bar.ejs') %>
-        <div class="container">
+        <div class="main-layout-container">
             <%- include('../partials/header.ejs') %>
             <main class="main">
                 <%- body %>
