--- a/views/layouts/login-register-layout.ejs
+++ b/views/layouts/login-register-layout.ejs
@@ -6,13 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title><%= locals.title %></title>
         <meta name="description" content="<%= locals.description %>">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/login-register-layout.css">
         <script type="text/javascript" defer src="/js/script.js"></script>
     </head>
     <body>
         <%- include('../partials/search-bar.ejs') %>
-        <div class="layout-container">
+        <div class="header-container">
             <%- include('../partials/header.ejs') %>
+        </div>
+        <div class="main-layout-container">
             <main class="main">
                 <%- body %>
             </main>
