Web redesign: login page, put img and form side by side.

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,23 +1,30 @@
 .login-page-container {
     display: flex;
-    justify-content: center; /* Horizontally center the content */
-    align-items: center; /* Vertically center the content */
-    min-height: 80vh;  /* Ensure the container takes up the full viewport height */
+    justify-content: center;
+    align-items: center;
+    height: 80vh; /* Adjust based on header and footer height */
+}
+
+.card-display-container {
+    display: flex;
+    width: 85%;
+    height: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.image-container {
+    width: 75%;
     background-image: url('/img/login_img.png');
-    background-size: cover; /* Ensure the background image covers the entire container */
+    background-size: 110%;
+    background-position: 50% 50%;
 }
 
-.form-container {
-    padding: 20px; /* Add some padding for spacing */
-}
-
-form {
-    max-width: 300px;
-    margin: 0 auto;
+.login-form-container {
+    width: 25%;
+    background-color: #f9f9f9;
     padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 label {
