--- a/views/login-register.ejs
+++ b/views/login-register.ejs
@@ -3,20 +3,23 @@
 </head>
 
 <div class="login-page-container">
-    <div class="login-form-container">
-        <form action="/login" method="post">
-            <h3>Sign In</h3>
-            <label for="username"><b>Username</b></label>
-            <input type="text" name="username" placeholder="Enter username">
+    <div class="card-display-container">
+        <div class="image-container"></div>
+        <div class="login-form-container">
+            <form action="/login" method="post">
+                <h3>Sign In</h3>
+                <label for="username"><b>Username</b></label>
+                <input type="text" name="username" placeholder="Enter username">
 
-            <label for="password"><b>Password</b></label>
-            <div class="password-input-div">
-                <input type="password" name="password" placeholder="Enter password" id="password-input">
-                <div id="show-password-icon" class="show-password-icon"></div>
-            </div>
+                <label for="password"><b>Password</b></label>
+                <div class="password-input-div">
+                    <input type="password" name="password" placeholder="Enter password" id="password-input">
+                    <div id="show-password-icon" class="show-password-icon"></div>
+                </div>
 
-            <input type="submit" value="Login">
-        </form>
+                <input type="submit" value="Login">
+            </form>
+        </div>
     </div>
 </div>
 
