--- a/public/css/login.css
+++ b/public/css/login.css
@@ -16,19 +16,37 @@
 
 .image-container {
     width: 75%;
+}
+
+.image-container::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
     background-image: url('/img/login_img.png');
-    background-size: 110%;
-    background-position: 50% 50%;
+    background-size: cover;
+    background-position: center;
 }
 
 .login-form-container {
     width: 25%;
+    padding: 40px;
     background-color: #f9f9f9;
-    padding: 20px;
+}
+
+h2 {
+    margin-bottom: 20px;
+    color: #333;
+}
+
+.login-form-group {
+    position: relative;
+    margin-bottom: 25px;
 }
 
 label {
-    display: block;
+    display: inline-block;
+    font-weight: bold;
     margin-bottom: 10px;
     color: #333;
 }
@@ -39,21 +57,28 @@ input[type="password"] {
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
-    border-radius: 3px;
+    border-radius: 5px;
 }
 
-input[type="submit"] {
+input[type="text"]:hover,
+input[type="password"]:hover {
+    border-color: #999; /* Change border color on hover */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); /* Add a subtle box-shadow on hover */
+    background-color: #f5f5f5; /* Change background color on hover */
+}
+
+button[type="submit"] {
     width: 100%;
     padding: 10px;
     background-color: #007bff;
     color: #fff;
     border: none;
-    border-radius: 3px;
+    border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
-input[type="submit"]:hover {
+button[type="submit"]:hover {
     background-color: #0056b3;
 }
 
@@ -63,8 +88,9 @@ input[type="submit"]:hover {
 
 .show-password-icon {
     position: absolute;
-    top: 10px;
+    top: 50%;
     right: 15px;
+    transform: translateY(-50%);
     width: 30px;
     height: 20px;
     background-image: url('/img/show_password_icon.png');
@@ -75,4 +101,55 @@ input[type="submit"]:hover {
 
 #show-password-icon {
     display: none;
+}
+
+.tooltip-icon {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+    background-color: transparent;
+    margin-left: 4px;
+    cursor: pointer;
+    transition: border-color 0.3s;
+}
+
+.tooltip-icon::before {
+    content: "i";
+    font-size: 9px;
+    font-weight: bold;
+    color: #ccc;
+    line-height: 1;
+}
+
+.tooltip-icon:hover {
+    border-color: #666;
+}
+
+.tooltip-icon:hover::before {
+    color: #666;
+}
+
+.tooltip-icon::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    background-color: #f0f0f0;
+    color: #333;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    top: 10%;
+    left: calc(35%);
+    transform: translateY(-50%);
+    white-space: nowrap;
+    display: none;
+    font-size: 10px;
+}
+
+.tooltip-icon:hover::after {
+    display: block;
 }
