--- a/views/login-register.ejs
+++ b/views/login-register.ejs
@@ -6,18 +6,22 @@
     <div class="card-display-container">
         <div class="image-container"></div>
         <div class="login-form-container">
+            <h2>Sign In</h2>
             <form action="/login" method="post">
-                <h3>Sign In</h3>
-                <label for="username"><b>Username</b></label>
-                <input type="text" name="username" placeholder="Enter username">
-
-                <label for="password"><b>Password</b></label>
-                <div class="password-input-div">
-                    <input type="password" name="password" placeholder="Enter password" id="password-input">
-                    <div id="show-password-icon" class="show-password-icon"></div>
+                <div class="login-form-group">
+                    <label for="username">Username</label>
+                    <div class="tooltip-icon" data-tooltip="Default: user"></div>
+                    <input type="text" name="username" placeholder="Enter username">
                 </div>
-
-                <input type="submit" value="Login">
+                <div class="login-form-group">
+                    <label for="password">Password</label>
+                    <div class="tooltip-icon" data-tooltip="Default: pw1234"></div>
+                    <div class="password-input-div">
+                        <input type="password" name="password" placeholder="Enter password" id="password-input">
+                        <div id="show-password-icon" class="show-password-icon"></div>
+                    </div>
+                </div>
+                <button type="submit">Login</button>
             </form>
         </div>
     </div>
