Minor change: slightly change the tooltip icon

--- a/views/login-register.ejs
+++ b/views/login-register.ejs
@@ -10,12 +10,12 @@
             <form action="/login" method="post">
                 <div class="login-form-group">
                     <label for="username">Username</label>
-                    <div class="tooltip-icon" data-tooltip="Default: user"></div>
+                    <div class="tooltip-icon" data-tooltip="Default: test"></div>
                     <input type="text" name="username" placeholder="Enter username">
                 </div>
                 <div class="login-form-group">
                     <label for="password">Password</label>
-                    <div class="tooltip-icon" data-tooltip="Default: pw1234"></div>
+                    <div class="tooltip-icon" data-tooltip="Default: test1234"></div>
                     <div class="password-input-div">
                         <input type="password" name="password" placeholder="Enter password" id="password-input">
                         <div id="show-password-icon" class="show-password-icon"></div>
