--- a/public/css/login.css
+++ b/public/css/login.css
@@ -62,9 +62,9 @@ input[type="password"] {
 
 input[type="text"]:hover,
 input[type="password"]:hover {
-    border-color: #999; /* Change border color on hover */
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); /* Add a subtle box-shadow on hover */
-    background-color: #f5f5f5; /* Change background color on hover */
+    border-color: #999;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    background-color: #f5f5f5;
 }
 
 button[type="submit"] {
@@ -104,13 +104,14 @@ button[type="submit"]:hover {
 }
 
 .tooltip-icon {
+    position: relative;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     width: 13px;
     height: 13px;
     border-radius: 50%;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     background-color: transparent;
     margin-left: 4px;
     cursor: pointer;
@@ -119,10 +120,9 @@ button[type="submit"]:hover {
 
 .tooltip-icon::before {
     content: "i";
-    font-size: 9px;
-    font-weight: bold;
+    font-size: 9.5px;
+    font-weight: 900;
     color: #ccc;
-    line-height: 1;
 }
 
 .tooltip-icon:hover {
@@ -142,8 +142,8 @@ button[type="submit"]:hover {
     border-radius: 5px;
     border: 1px solid #ccc;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    top: 10%;
-    left: calc(35%);
+    top: 5%;
+    left: calc(35% + 10px);
     transform: translateY(-50%);
     white-space: nowrap;
     display: none;
