--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh; /* Adjust based on header and footer height */
+    height: 80vh;
 }
 
 .card-display-container {
@@ -31,12 +31,12 @@
 .login-form-container {
     width: 25%;
     padding: 40px;
-    background-color: #f9f9f9;
+    background-color: rgb(238, 226, 226);
 }
 
 h2 {
     margin-bottom: 20px;
-    color: #333;
+    color: rgb(43,  49,  95);
 }
 
 .login-form-group {
@@ -48,7 +48,7 @@ label {
     display: inline-block;
     font-weight: bold;
     margin-bottom: 10px;
-    color: #333;
+    color: rgb(43,  49,  95);
 }
 
 input[type="text"],
@@ -70,7 +70,7 @@ input[type="password"]:hover {
 button[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: rgb(109, 84, 117);
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -79,7 +79,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: rgb(75, 60, 80);
 }
 
 .password-input-div {
