Web redesign: increase login button text size

--- a/views/login-register.ejs
+++ b/views/login-register.ejs
@@ -21,7 +21,7 @@
                         <div id="show-password-icon" class="show-password-icon"></div>
                     </div>
                 </div>
-                <button type="submit">Login</button>
+                <button type="submit" id="login-button">Login</button>
             </form>
             <hr>
             <p>Or</p>
