--- a/public/css/login.css
+++ b/public/css/login.css
@@ -79,6 +79,10 @@ button[type="submit"] {
     margin-bottom: 20px;
 }
 
+#login-button {
+    font-size: 16px;
+}
+
 button[type="submit"]:hover {
     background-color: rgb(75, 60, 80);
 }
