--- a/public/css/login.css
+++ b/public/css/login.css
@@ -41,13 +41,13 @@ h2 {
 
 .login-form-group {
     position: relative;
-    margin-bottom: 25px;
+    margin-bottom: 20px;
 }
 
 label {
     display: inline-block;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
     color: rgb(43,  49,  95);
 }
 
@@ -55,7 +55,7 @@ input[type="text"],
 input[type="password"] {
     width: 100%;
     padding: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
@@ -67,6 +67,11 @@ input[type="password"]:hover {
     background-color: #f5f5f5;
 }
 
+.error-message {
+    color: #ff0000;
+    font-size: 12px;
+}
+
 button[type="submit"] {
     width: 100%;
     padding: 10px;
@@ -76,7 +81,7 @@ button[type="submit"] {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 #login-button {
@@ -164,7 +169,7 @@ hr {
     background-color: #ccc;
     height: 2px;
     border: none;
-    margin: 20px 0;
+    margin: 40px 0;
 }
 
 p {
@@ -172,7 +177,7 @@ p {
     font-size: 12px;
     font-weight: 600;
     color: #666;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
 }
 
 #invitation-code-inputs {
