--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header class="header">
-    <a href="/admin" class="header__logo">R•A•Y</a>
+    <a href="/login" class="header__logo">R•A•Y</a>
 
     <nav class="header__nav">
         <ul>
