Add feature: create new signup page

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/signup.css">
 </head>
 
 <div class="login-page-container">
@@ -26,19 +26,9 @@
                 <button type="submit" id="login-button">Login</button>
             </form>
             <hr>
-            <p>Or</p>
-            <form action="/verify-invitation-code" method="post">
-                <button type="submit">Signup with Invitation Code</button>
-                <div class="login-form-group">
-                    <div id="invitation-code-inputs">
-                        <input type="text" maxlength="1" size="1" name="invitation-code-1" placeholder="-">
-                        <input type="text" maxlength="1" size="1" name="invitation-code-2" placeholder="-">
-                        <input type="text" maxlength="1" size="1" name="invitation-code-3" placeholder="-">
-                        <input type="text" maxlength="1" size="1" name="invitation-code-4" placeholder="-">
-                    </div>
-                    <div class="tooltip-icon" data-tooltip="Default: 1234"></div>
-                    <p class="error-message" id="invitation-inputs-error">Must be a 4-digit code.</p>
-                </div>
+            <p>Already have an accout?</p>
+            <form action="/login" method="get">
+                <button type="submit">Login to an Existing Account</button>
             </form>
         </div>
     </div>
