--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -6,7 +6,7 @@
     <div class="card-display-container">
         <div class="image-container"></div>
         <div class="login-form-container">
-            <h2>Sign In</h2>
+            <h2>Welcome back!</h2>
             <form action="/login" method="post">
                 <div class="login-form-group">
                     <label for="username">Username</label>
