--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -6,26 +6,28 @@
     <div class="card-display-container">
         <div class="image-container"></div>
         <div class="login-form-container">
-            <h2>Sign In</h2>
-            <form action="/login" method="post">
+            <h2>Welcome!</h2>
+            <form action="/signup" method="post">
                 <div class="login-form-group">
                     <label for="username">Username</label>
-                    <div class="tooltip-icon" data-tooltip="Default: admin"></div>
-                    <input type="text" name="username" placeholder="Enter username" id="username-input">
+                    <input type="text" name="username" placeholder="Enter username">
                     <p class="error-message" id="username-error">Please enter a username.</p>
                 </div>
                 <div class="login-form-group">
                     <label for="password">Password</label>
-                    <div class="tooltip-icon" data-tooltip="Default: test1234"></div>
-                    <div class="password-input-div">
-                        <input type="password" name="password" placeholder="Enter password" id="password-input">
-                        <div id="show-password-icon" class="show-password-icon"></div>
-                        <p class="error-message" id="password-error">Please enter a password.</p>
-                    </div>
+                    <input type="password" name="password" placeholder="Enter password">
+                    <p class="error-message" id="password-error">Please enter a password.</p>
                 </div>
-                <button type="submit" id="login-button">Login</button>
+                <div class="login-form-group">
+                    <label for="confirm-password">Confirm Password</label>
+                    <input type="password" name="confirm-password" placeholder="Retype password">
+                    <p class="error-message" id="confirm-password-error">Passwords do not match.</p>
+                </div>
+                <button type="submit" id="signup-button">Sign Up</button>
             </form>
+
             <hr>
+
             <p>Already have an accout?</p>
             <form action="/login" method="get">
                 <button type="submit">Login to an Existing Account</button>
