--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,78 +1,87 @@
-<div class="admin__title">
-    <h2>Manage Posts</h2>
-    <a href="/add-post" class="btn">+ Add New</a>
-</div>
+<header class="dashboard-header">
+    <div class="dashboard-title">
+        <h1>Blog Dashboard</h1>
+    </div>
+    <div class="admin-title">
+        <h2>Manage Posts</h2>
+        <a href="/add-post" class="btn">+ Add New</a>
+    </div>
+</header>
 
-<section class="admin__posts">
-
-    <% if (pageNum > 0) { %>
-        <a href="?page=<%= pageNum - 1 %>&deletedPage=<%= deletedPageNum %>" class="pagination">
-            &lt; View Recent Posts
-        </a>
-    <% } %>
-
-    <ul class="admin__posts__ul">
-        <% posts.forEach(post => { %>
-            <li>
-                <a href="post/<%= post._id %>">
-                    <span><%= post.title %></span>
-                    <span class="article-list__date"><%= post.createdAt.toDateString() %></span>
+<main class="dashboard-main">
+    <!-- CREATED SECTION -->
+    <section class="dashboard-section">
+        <div class="dashboard-title">
+            <h2>Manage Posts</h2>
+        </div>
+        <div class="dashboard-content">
+            <% if (pageNum > 0) { %>
+                <a href="?page=<%= pageNum - 1 %>&deletedPage=<%= deletedPageNum %>" class="pagination">
+                    &lt; View Recent Posts
                 </a>
+            <% } %>
 
-                <div class="admin__post__controls">
-                    <a href="edit-post/<%= post._id %>" class="btn">Edit</a>
-                    <form class="" action="delete-post/<%= post._id %>?_method=PUT" method="post">
-                        <input type="submit" value="Delete" class="btn">
-                    </form>
-                </div>
-            </li>
-        <% }) %>
-    </ul>
+            <ul class="dashboard-posts-ul">
+                <% posts.forEach(post => { %>
+                    <li>
+                        <a href="post/<%= post._id %>">
+                            <span><%= post.title %></span>
+                            <span class="article-date"><%= post.createdAt.toDateString() %></span>
+                        </a>
 
-    <% if (hasNextPage) { %>
-        <a href="?page=<%= pageNum + 1 %>&deletedPage=<%= deletedPageNum %>" class="pagination">
-            &lt; View Older Posts
-        </a>
-    <% } %>
+                        <div class="dashboard-post-controls">
+                            <a href="edit-post/<%= post._id %>" class="btn">Edit</a>
+                            <form class="" action="delete-post/<%= post._id %>?_method=PUT" method="post">
+                                <input type="submit" value="Delete" class="btn">
+                            </form>
+                        </div>
+                    </li>
+                <% }) %>
+            </ul>
 
-</section>
-
-
-<!-- DELETED SECTION -->
-<div class="admin__title">
-    <h2>Manage Deleted Posts</h2>
-</div>
-
-<section class="admin__posts">
-
-    <% if (deletedPageNum > 0) { %>
-        <a href="?page=<%= pageNum %>&deletedPage=<%= deletedPageNum - 1 %>" class="pagination">
-            &lt; View Recent Deleted Posts
-        </a>
-    <% } %>
-
-    <ul class="admin__posts__ul">
-        <% deletedPosts.forEach(post => { %>
-            <li>
-                <a href="post/<%= post._id %>">
-                    <span><%= post.title %></span>
-                    <span class="article-list__date"><%= post.createdAt.toDateString() %></span>
+            <% if (hasNextPage) { %>
+                <a href="?page=<%= pageNum + 1 %>&deletedPage=<%= deletedPageNum %>" class="pagination">
+                    View Older Posts &gt;
                 </a>
+            <% } %>
+        </div>
+    </section>
 
-                <div class="admin__post__controls">
-                    <a href="edit-post/<%= post._id %>" class="btn">Edit</a>
-                    <form class="" action="restore-post/<%= post._id %>?_method=PUT" method="post">
-                        <input type="submit" value="Restore" class="btn">
-                    </form>
-                </div>
-            </li>
-        <% }) %>
-    </ul>
+    <!-- DELETED SECTION -->
+    <section class="dashboard-section">
+        <div class="dashboard-title">
+            <h2>Manage Deleted Posts</h2>
+        </div>
+        <div class="dashboard-content">
+            <% if (deletedPageNum > 0) { %>
+                <a href="?page=<%= pageNum %>&deletedPage=<%= deletedPageNum - 1 %>" class="pagination">
+                    &lt; View Recent Deleted Posts
+                </a>
+            <% } %>
 
-    <% if (hasNextDeletedPage) { %>
-        <a href="?page=<%= pageNum %>&deletedPage=<%= deletedPageNum + 1 %>" class="pagination">
-            &lt; View Older Deleted Posts
-        </a>
-    <% } %>
+            <ul class="dashboard-posts-ul">
+                <% deletedPosts.forEach(post => { %>
+                    <li>
+                        <a href="post/<%= post._id %>">
+                            <span><%= post.title %></span>
+                            <span class="article-date"><%= post.createdAt.toDateString() %></span>
+                        </a>
 
-</section>
+                        <div class="dashboard-post-controls">
+                            <a href="edit-post/<%= post._id %>" class="btn">Edit</a>
+                            <form class="" action="restore-post/<%= post._id %>?_method=PUT" method="post">
+                                <input type="submit" value="Restore" class="btn">
+                            </form>
+                        </div>
+                    </li>
+                <% }) %>
+            </ul>
+
+            <% if (hasNextDeletedPage) { %>
+                <a href="?page=<%= pageNum %>&deletedPage=<%= deletedPageNum + 1 %>" class="pagination">
+                    &lt; View Older Deleted Posts
+                </a>
+            <% } %>
+        </div>
+    </section>
+</main>
