--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -2,10 +2,12 @@
     <div class="dashboard-title">
         <h1>Blog Dashboard</h1>
     </div>
-    <div class="admin-title">
-        <h2>Manage Posts</h2>
-        <a href="/add-post" class="btn">+ Add New</a>
-    </div>
+    <nav class="dashboard-nav">
+        <ul>
+            <li><a href="/add-post">Add New Post</a></li>
+            <li><a href="/logout">Logout</a></li>
+        </ul>
+    </nav>
 </header>
 
 <main class="dashboard-main">
@@ -21,7 +23,7 @@
                 </a>
             <% } %>
 
-            <ul class="dashboard-posts-ul">
+            <ul class="dashboard-post-ul">
                 <% posts.forEach(post => { %>
                     <li>
                         <a href="post/<%= post._id %>">
@@ -30,9 +32,9 @@
                         </a>
 
                         <div class="dashboard-post-controls">
-                            <a href="edit-post/<%= post._id %>" class="btn">Edit</a>
+                            <a href="edit-post/<%= post._id %>" class="btn btn-edit">Edit</a>
                             <form class="" action="delete-post/<%= post._id %>?_method=PUT" method="post">
-                                <input type="submit" value="Delete" class="btn">
+                                <input type="submit" value="Delete" class="btn btn-delete">
                             </form>
                         </div>
                     </li>
@@ -59,7 +61,7 @@
                 </a>
             <% } %>
 
-            <ul class="dashboard-posts-ul">
+            <ul class="dashboard-post-ul">
                 <% deletedPosts.forEach(post => { %>
                     <li>
                         <a href="post/<%= post._id %>">
@@ -68,9 +70,9 @@
                         </a>
 
                         <div class="dashboard-post-controls">
-                            <a href="edit-post/<%= post._id %>" class="btn">Edit</a>
+                            <a href="edit-post/<%= post._id %>" class="btn btn-edit">Edit</a>
                             <form class="" action="restore-post/<%= post._id %>?_method=PUT" method="post">
-                                <input type="submit" value="Restore" class="btn">
+                                <input type="submit" value="Restore" class="btn btn-restore">
                             </form>
                         </div>
                     </li>
