Web redesign: using different tabs to display created/deleted posts on dashboard.

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -38,10 +38,15 @@
 }
 
 .dashboard-section {
+    display: none;
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     flex-basis: 48%;
+}
+
+.dashboard-section.active {
+    display: block;
 }
 
 .dashboard-title h2 {
