--- a/public/css/login-signup-layout.css
+++ b/public/css/login-signup-layout.css
@@ -5,7 +5,7 @@
 @import url('author.css');
 @import url('articles.css');
 @import url('footer.css');
-@import url('admin-dashboard.css');
+@import url('dashboard.css');
 
 /* layout */
 .header-container {
