Add feature: add an invitation code section to dashboard.

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="#created-post-section" class="tab-link current-tab">Current Posts</a></li>
             <li><a href="#deleted-post-section" class="tab-link">Deleted Posts</a></li>
+            <li><a href="#invitation-code-section" class="tab-link">Invitation Code</a></li>
             <li><a href="/add-post">Add New Post</a></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
@@ -90,6 +91,16 @@
                     &lt; View Older Deleted Posts
                 </a>
             <% } %>
+        </div>
+    </section>
+
+    <!-- INVITATION CODE SECTION -->
+    <section class="dashboard-section"  id="invitation-code-section">
+        <div class="dashboard-title">
+            <h2>Manage Invitation Code</h2>
+        </div>
+        <div class="dashboard-content">
+
         </div>
     </section>
 </div>
