Code refactoring: use ejs to extract invitation codes section to a different file.

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -28,13 +28,8 @@
         <%- include('dashboard-sections/deleted-posts.ejs') %>
     </section>
 
-    <!-- INVITATION CODE SECTION -->
+    <!-- INVITATION CODES SECTION -->
     <section class="dashboard-section"  id="invitation-code-section">
-        <div class="dashboard-title">
-            <h2>Manage Invitation Code</h2>
-        </div>
-        <div class="dashboard-content">
-
-        </div>
+        <%- include('dashboard-sections/invitation-codes.ejs') %>
     </section>
 </div>
