--- a/views/admin/dashboard-sections/invitation-codes.ejs
+++ b/views/admin/dashboard-sections/invitation-codes.ejs
@@ -7,11 +7,7 @@
 </div>
 
 <div class="dashboard-tools-panel">
-    <form class="dashboard-tool" id="generate-invitation-code">
-        <label for="new-code">New Invitation Code:</label>
-        <input type="text" id="new-code" readonly>
-        <button type="bnt" id="generate-invitation-code-btn">Generate Code</button>
-    </form>
+    <button type="bnt" id="generate-invitation-code-btn">Generate Code</button>
 </div>
 
 <div class="dashboard-content">
@@ -33,12 +29,24 @@
 
 <div id="overlay" class="overlay">
     <div class="panel">
+
         <h2>Generate Invitation Code</h2>
-        <p>Code: <span id="generated-code"></span></p>
-        <label><input type="checkbox" name="option1"> Option 1</label><br>
-        <label><input type="checkbox" name="option2"> Option 2</label><br>
-        <!-- Add more checkbox options as needed -->
-        <button id="add-code-btn">Add Code</button>
         <button id="close-btn">Close</button>
+        <form action="/add-invitation-code" method="post">
+            <p>Code: </p>
+            <div id="invitation-code-outputs">
+                <input type="text" maxlength="1" size="1" name="invitation-code-1" placeholder="-">
+                <input type="text" maxlength="1" size="1" name="invitation-code-2" placeholder="-">
+                <input type="text" maxlength="1" size="1" name="invitation-code-3" placeholder="-">
+                <input type="text" maxlength="1" size="1" name="invitation-code-4" placeholder="-">
+            </div>
+            <div class="tooltip-icon" data-tooltip="Default: 1234"></div>
+            <p class="error-message" id="invitation-outputs-error">Must be a 4-digit code.</p>
+            <label><input type="checkbox" name="option1"> Option 1</label><br>
+            <label><input type="checkbox" name="option2"> Option 2</label><br>
+            <button type="submit" name="addCodeBtn" value="Add Code">Add Code</button>
+        </form>
+
+        <!-- Add more checkbox options as needed -->
     </div>
 </div>
