Add feature: taking full control of code form submit; display message on add-code panel based on server response

--- a/views/admin/dashboard-sections/invitation-codes.ejs
+++ b/views/admin/dashboard-sections/invitation-codes.ejs
@@ -41,7 +41,7 @@
                 <input type="text" maxlength="1" size="1" name="invitation-code-4" placeholder="-">
             </div>
             <div class="tooltip-icon" data-tooltip="Default: 1234"></div>
-            <p class="error-message" id="invitation-outputs-error">Must be a 4-digit code.</p>
+            <p class="error-message" id="invitation-outputs-error"></p>
             <label><input type="checkbox" name="option1"> Option 1</label><br>
             <label><input type="checkbox" name="option2"> Option 2</label><br>
             <button type="submit" name="addCodeBtn" value="Add Code">Add Code</button>
