--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -135,3 +135,14 @@
     top: 10px;
     right: 10px;
 }
+
+#invitation-code-outputs {
+    display: inline-flex;
+}
+
+#invitation-code-outputs input {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    margin-right: 5px;
+}
