Add feature: add client side code to pass to-delete code id to the server and display message based on server response.

--- a/views/admin/dashboard-sections/invitation-codes.ejs
+++ b/views/admin/dashboard-sections/invitation-codes.ejs
@@ -11,6 +11,7 @@
 </div>
 
 <div class="dashboard-content">
+    <p class="inline-message" id="delete-code-message"></p>
     <ul class="dashboard-post-ul">
         <% if (codeCnt == 0) { %>
             <span>No invitation code available.</span>
