Add feature: add styles to the notification and inner text and button.

--- a/views/admin/dashboard-sections/invitation-codes.ejs
+++ b/views/admin/dashboard-sections/invitation-codes.ejs
@@ -53,6 +53,6 @@
 </div>
 
 <div class="notification" id="delete-code-notification">
-    <span id="delete-code-message"></span>
+    <span id="delete-code-message">delete code successful</span>
     <button id="delete-code-message-close">&times;</button>
 </div>
