--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -146,3 +146,24 @@
     text-align: center;
     margin-right: 5px;
 }
+
+.notification {
+    position: fixed;
+    bottom: 40px;
+    right: 20px;
+    /* transform: translateX(-100%); */
+    /* transform: translateY(-100%); */
+    background-color: #fff;
+    color: #333;
+    padding: 5px 10px;
+    border-radius: 20px;
+    font-size: 15px;
+}
+
+.notification button {
+    background-color: transparent;
+    border: none;
+    color: #333;
+    font-size: 15px;
+    cursor: pointer;
+}
