--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -148,22 +148,27 @@
 }
 
 .notification {
+    justify-content: center;
+    align-items: center;
     position: fixed;
-    bottom: 40px;
+    bottom: 30px;
     right: 20px;
-    /* transform: translateX(-100%); */
-    /* transform: translateY(-100%); */
     background-color: #fff;
     color: #333;
-    padding: 5px 10px;
+    padding: 8px 15px;
     border-radius: 20px;
     font-size: 15px;
+    display: none;
+    z-index: 999;
 }
 
 .notification button {
     background-color: transparent;
     border: none;
+    width: 15px;
+    height: 15px;
+    padding: 0px;
     color: #333;
-    font-size: 15px;
+    font-size: 18px;
     cursor: pointer;
 }
